fix: added min widht to create one size for popover. Fixes overlapping title and close icon

--- a/style/elvis/css/elvis.css
+++ b/style/elvis/css/elvis.css
@@ -5212,6 +5212,7 @@ input:focus {
   pointer-events: all;
   position: absolute;
   width: max-content;
+  min-width: 400px;
   max-width: 400px;
   padding: 24px;
   background-color: #fff;
@@ -5232,6 +5233,7 @@ input:focus {
 }
 @media (max-width: 767px) {
   .e-popover__content {
+    min-width: 300px;
     max-width: 300px;
   }
 }
@@ -5265,6 +5267,7 @@ input:focus {
   color: #000;
   font-weight: 500 !important;
   padding-bottom: 8px;
+  margin-right: 16px;
 }
 
 .e-popover__content .e-popover__text {
