--- a/style/elvis/src/components/popover.scss
+++ b/style/elvis/src/components/popover.scss
@@ -10,8 +10,8 @@ $popover-arrow-size-small: calc(#{$popover-arrow-size} - (#{$popover-border-widt
 $popover-arrow-offset: 25px; // Midtstilt i forhold til ikon 16X16px (xs)
 $popover-button-offset: -30px;
 
-$popover-desktop-max-width: 400px;
-$popover-mobile-max-width: 300px;
+$popover-desktop-size: 400px;
+$popover-mobile-size: 300px;
 
 %e-popover--center .e-popover__content {
   left: 50%;
@@ -106,7 +106,8 @@ $popover-mobile-max-width: 300px;
     pointer-events: all;
     position: absolute;
     width: max-content;
-    max-width: $popover-desktop-max-width;
+    min-width: $popover-desktop-size;
+    max-width: $popover-desktop-size;
     padding: $popover-padding;
     background-color: colors.color('white');
     color: colors.color('font-color');
@@ -125,7 +126,8 @@ $popover-mobile-max-width: 300px;
     }
 
     @include breakpoints.breakpoint-up(Mobile) {
-      max-width: $popover-mobile-max-width;
+      min-width: $popover-mobile-size;
+      max-width: $popover-mobile-size;
     }
 
     // for smallest units
@@ -146,6 +148,7 @@ $popover-mobile-max-width: 300px;
       @include typography.typography('text-info');
       font-weight: 500 !important;
       padding-bottom: 8px;
+      margin-right: 16px;
     }
     .e-popover__text {
       @include typography.typography('text-info');
